2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Force inlining of
	add_part to workaround compiler bug.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h (FOR_MODULES): Preserve alignment invariants.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/multiboot_mbi2.c (grub_multiboot_add_elfsyms):
	Reserve alignment invariants.
	(grub_multiboot_load): Likewise.
	(retrieve_video_parameters): Likewise.
	(grub_multiboot_make_mbi): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (grub_xnu_devprop_remove_property): Fix
	incorrect pointer.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/pata.c (grub_pata_pio_read): Handle unaligned buffer.
	(grub_pata_pio_write): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Add noreturn attributes and remove unreachable code.

	* grub-core/bus/cs5536.c (grub_cs5536_smbus_wait): Remove unreachable
	code.
	* grub-core/commands/halt.c (grub_cmd_halt): Remove unreachable
	code. Mark as noreturn.
	* grub-core/commands/minicmd.c (grub_mini_cmd_exit): Likewise.
	* grub-core/commands/reboot.c (grub_cmd_reboot): Likewise.
	* grub-core/disk/efi/efidisk.c (grub_efidisk_get_device_name): Remove
	unreachable code.
	* grub-core/kern/main.c (grub_main): Mark as noreturn.
	* grub-core/kern/rescue_reader.c (grub_rescue_run): Likewise.
	* grub-core/lib/posix_wrap/stdlib.h (abort): Likewise.
	* grub-core/normal/menu.c (run_menu): Remove unreachable code.
	* include/grub/kernel.h (grub_main): Mark as noreturn.
	* include/grub/reader.h (grub_rescue_run): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/qemu/memory.h (grub_machine_mmap_init): Remove
	redundant declaration.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/net.h (grub_net_network_level_interfaces): Remove
	redundant declaration.