@@ -1,5 +1,11 @@
 2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/iso9660.c (grub_iso9660_convert_string): Make first
+	argument a u8 pointer. All users updated.
+	Handle unaligned buffers.
+
+2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Force inlining of
 	add_part to workaround compiler bug.
 
